--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,10 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
+
+    // Spring Boot plugins
+    id 'org.springframework.boot' version '2.6.4'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 }
 
 repositories {
@@ -20,6 +24,22 @@ repositories {
 dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
+
+    implementation 'org.springframework.boot:spring-boot-dependencies:2.6.4'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    components {
+        withModule('org.springframework:spring-beans') {
+            allVariants {
+                withDependencyConstraints {
+                    // Need to patch constraints because snakeyaml is an optional dependency
+                    it.findAll { it.name == 'snakeyaml' }.each { it.version { strictly '1.19' } }
+                }
+            }
+        }
+    }
 }
 
 testing {
@@ -35,4 +55,8 @@ testing {
 application {
     // Define the main class for the application.
     mainClass = 'spring.hello.world.App'
+}
+
+bootJar {
+    mainClassName = 'spring.hello.world.App'
 }
